[package]
name = "solana-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
boring = { version = "4.2.0" }
ct-codecs = "1.1.1"
superboring = { version = "0.1.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
